--- a/dental-ai-web/package.json
+++ b/dental-ai-web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.13.2",
+    "aws-amplify": "^6.15.9",
     "axios": "^1.13.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
